force-app/main/default/objects/API_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>settings to be used by the SFDC APIs</description>
    <fields>
        <fullName>Admin_Id__c</fullName>
        <description>the id of the admin who will get the &quot;tasks&quot; in case an anomoly happens.</description>
        <label>Admin Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insert_Account_When_Not_Found__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Tells UpdateAccount API if it needs to insert an account if it didn&apos;t find any matches.</description>
        <label>Insert Account When Not Found</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>additionalBoolean1__c</fullName>
        <description>a custom boolean field to be used in the UpdateAccount API</description>
        <label>additionalBoolean1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>additionalDate1__c</fullName>
        <description>a custom date field to be used in the UpdateAccount API</description>
        <label>additionalDate1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>additionalText1__c</fullName>
        <description>the name of the field that would be dynamically mapped to - used for UpdateAccount</description>
        <label>additionalText1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>additionalText2__c</fullName>
        <description>the name of the 2nd custom field on the account - used for UpdateAccount API.</description>
        <label>additionalText2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>API Settings</label>
</CustomObject>